seat byticket cinema

--- a/movie.html
+++ b/movie.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="fontawesome/css/all.min.css" />
-    <link rel="stylesheet" href="movie.css">
+    <link rel="stylesheet" href="css/movie.css">
 </head>
 
 <body>
@@ -67,7 +67,7 @@
                                 </div>
                             </div>
                             <div class="card_movie_body text-center">
-                                <h6 class="movie_title">người quên phải nhớ</h6>
+                                <h6 class="movie_title">người quên phải nhớ người quên phải nhớ</h6>
                                 <p class="movie_date_time text-center"><span style="font-size: 13px;" class="movie_time">100phút</span> &#124; <span style="font-size: 13px;" class=" movie_date ">20/12/2020</span></p>
                             </div>
                         </div>
