--- a/event.html
+++ b/event.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="fontawesome/css/all.min.css" />
-    <link rel="stylesheet" href="event.css">
+    <link rel="stylesheet" href="css/event.css">
 </head>
 
 <body>
