--- a/gift.html
+++ b/gift.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="fontawesome/css/all.min.css" />
-    <link rel="stylesheet" href="gift.css">
+    <link rel="stylesheet" href="css/gift.css">
 </head>
 
 <body>
