--- a/moviedetails.html
+++ b/moviedetails.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="fontawesome/css/all.min.css" />
-    <link rel="stylesheet" href="moviedetails.css">
+    <link rel="stylesheet" href="css/moviedetails.css">
 
 </head>
 
