--- a/index.html
+++ b/index.html
@@ -218,51 +218,63 @@
         <div class="container-fluid mt-5 pb-5" id="event">
             <div class="container">
                 <div class="row">
+                    <div class="col-md-12 col-sm-12 col-12 pt-4 pb-2 text-center">
+                        <h1 class="area_title">EVENT</h1>
+                    </div>
+                </div>
+                <div class="row">
                     <div class="col-md-8 col-sm-12 col-12">
-                        <div class="row">
-                            <div class="col-md-12 col-sm-12 col-12 text-center">
-                                <h1 class="area_title">EVENT</h1>
-                            </div>
-                        </div>
                         <div class="row">
                             <div class="col-md-12 col-sm-12 col-12">
                                 <div class="row">
                                     <div class="col-md-6 col-sm-12 col-12">
                                         <div class="row">
-                                            <div class="col-md-12 col-sm-12 col-12">
-                                                <a href="#"><img style="margin-bottom: 30px;" width="100%" src="img/event-1.jpg" alt=""></a>
+                                            <div class="col-md-12 col-sm-12 col-12 pb-3">
+                                                <a href="javascript:void(0);"><img width="100%" src="img/event-1.jpg" alt=""></a>
                                             </div>
-                                            <div class="col-md-12 col-sm-12 col-12">
-                                                <a href="#"><img width="100%" src="img/event-2.jpg" alt=""></a>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-12 col-sm-12 col-12 pt-3 ">
+                                                <a href="javascript:void(0);"><img width="100%" src="img/event-2.jpg" alt=""></a>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-6 col-sm-12 col-12">
+                                    <div class="col-md-6">
                                         <div class="row">
-                                            <div class="col-md-12 col-sm-12 col-12">
-                                                <a href="#"><img style="margin-bottom: 30px;" width="100%" src="img/event-3.jpg" alt=""></a>
+                                            <div class="col-md-12 col-sm-12 col-12 pb-3">
+                                                <a href="javascript:void(0);"><img width="100%" src="img/event-3.jpg" alt=""></a>
                                             </div>
-                                            <div class="col-md-12 col-sm-12 col-12 ">
-                                                <a href="#"><img width="100%" src="img/event-4.jpg" alt=""></a>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-12 col-sm-12 col-12 pt-3 pb-3">
+                                                <a href="javascript:void(0);"><img width="100%" src="img/event-4.jpg" alt=""></a>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-12 col-sm-12 col-12" id="stop_slider">
-                                <a href="#"><img style="margin-top: 30px;" width="100%" src="img/event-5.jpg" alt=""></a>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12 col-sm-12 col-12 pt-3">
+                                <a href="javascript:void(0);"><img width="100%" src="img/event-5.jpg" alt=""></a>
                             </div>
                         </div>
                     </div>
-                    <div id="start_slider" class="col-md-4 w-100">
-                        <div id="slider_advertisement">
-                            <img src="img/event-6.jpg" alt="">
+                    <div class="col-md-4 col-sm-12 col-12">
+                        <div class="row">
+                            <div class="col-md-12 col-sm-12 col-12 pb-3">
+                                <a href="javascript:void(0);"><img width="100%" src="img/event-6.jpg" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12 col-sm-12 col-12 pt-3">
+                                <a href="javascript:void(0);"><img width="100%" src="img/event-7.jpg" alt=""></a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- end event -->
+            <!-- end event -->
     </section>
     <!-- end main -->
     <!-- start footer  -->
@@ -401,6 +413,9 @@
     </section>
     <!-- end footer -->
 </body>
+<style>
+
+</style>
 <script src="jquery-3.5.1.min.js"></script>
 <script src="bootstrap/js/bootstrap.min.js"></script>
 <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
@@ -423,5 +438,6 @@
         },
     });
 </script>
+
 
 </html>
